<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Synchronator</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet">No Internet Access</string>
    <string name="wait">One moment, please!</string>
    <string name="atsync">Synchronizing Data!</string>
    <string name="login_failed">Login failed!</string>
    <string name="content_description">Content Description.</string>
    <string name="server_settings">Server Settings</string>
    <string name="ip">IP:</string>
    <string name="port">Port:</string>
    <string name="ip_example">http://10.0.2.2</string>
    <string name="port_example">45678</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="refreshingtime">Refreshing Time (h)</string>
    <string name="refresh">Refresh</string>
    <!-- action bar stuff -->
    <string name="action_home">Home</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_notes">Notes</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_accounts">Accounts</string>
    <string name="action_add">Add</string>

    <string-array name="accounts_array">
        <item>Google</item>
        <item>Exchange</item>
    </string-array>
    <string-array name="contacts_array">
        <item>Kontakt 1</item>
        <item>Kontakt 2</item>
        <item>Kontakt 3</item>
        <item>Kontakt 4</item>
        <item>Kontakt 5</item>
        <item>Kontakt 6</item>
        <item>Kontakt 7</item>
    </string-array>
    <string-array name="notes_array">
        <item>Notiz 1</item>
        <item>Notiz 2</item>
        <item>Notiz 3</item>
        <item>Notiz 4</item>
        <item>Notiz 5</item>
        <item>Notiz 6</item>
        <item>Notiz 7</item>
    </string-array>

    <string name="passwort">Passwort</string>
    <string name="registrieren">Registrieren</string>
    <string name="synchronator">Synchronator</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
	<string name="action_add_object">Hinzufügen</string>
	<string name="action_logout">Logout</string>
	<string name="lastname">Lastname</string>
	<string name="forename">Forename</string>
	<string name="phonenumber">Phonenumber</string>
	<string name="save_to">Save to</string>
	<string name="delete_synchronator_account">delete Synchronator account</string>
	<string name="change_date">Change Date</string>
	<string name="change_time">Change Time</string>
	<string name="description">Description:</string>
	<string name="repeat">Repeat:</string>
	<string name="every_day">Every Day</string>
	<string name="every_month">Every Month</string>
	<string name="every_year">Every Year</string>
	<string name="date_from">Date from:</string>
	<string name="date_to">Date to:</string>
	<string name="time_from">Time from:</string>
	<string name="time_to">Time to:</string>
	<string name="title">Title</string>
	<string name="text">Text</string>
	<string name="email_example">aaa@a.de</string>
	<string name="passwort_example">qqq</string>
	<string name="registrierung">Registrierung:</string>
	<string name="mustermannAweb_de">Mustermann@web.de</string>
	<string name="password_textview">Passwort:</string>
	<string name="password_wiederholen_textview">Passwort wiederholen:</string>
	<string name="change">Change</string>
	<string name="account_type">Account Type</string>
	<string name="username">Username</string>
	<string name="provider">Provider</string>
	<string name="purge_db">DEV: Purge DB</string>
	<string name="store_pass">swe1314</string>
	<string name="name">Name</string>
	<string name="date_example">dd-mm-yyyy</string>
	<string name="time_example">hh:mm</string>
	<string name="no_repeat">No Repeat</string>
	<string name="server">Server</string>
	<string name="description_doublepoint">Description</string>
</resources>