<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/action_accounts"/>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_add"
        android:visible="true"/>
    <item
        android:id="@+id/action_contacts"
        android:icon="@drawable/ic_menu_friendslist"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_contacts"
        android:visible="true"/>
    
    <item
        android:id="@+id/action_calendar"
        android:icon="@drawable/ic_menu_month"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_calendar"
        android:visible="true"/>
    <item
        android:id="@+id/action_notes"
        android:icon="@drawable/perm_group_user_dictionary_write"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/action_notes"
        android:visible="true"/>
    <item android:id="@+id/purge_db_btn" android:title="@string/purge_db" android:visible="false"></item>

</menu>