<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <Button
        android:id="@+id/button_cancel_show_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="onClickCancel"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/text_synchronator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/date_from"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_date_from_show_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_synchronator"
        android:text="@string/date_example"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#2F4F4F" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="203dp"
        android:text="@string/date_to"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_date_to_show_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="@string/date_example"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#2F4F4F" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_date_from_show_event"
        android:layout_marginTop="27dp"
        android:text="@string/time_from"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/textView_date_to_show_event"
        android:text="@string/time_to"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_time_from_show_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:text="@string/time_example"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#2F4F4F" />

    <TextView
        android:id="@+id/textView_time_to_show_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_time_from_show_event"
        android:layout_alignBottom="@+id/textView_time_from_show_event"
        android:layout_alignLeft="@+id/textView4"
        android:text="@string/time_example"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#2F4F4F" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_time_from_show_event"
        android:layout_marginTop="115dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="59dp"
        android:text="@string/repeat"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_repeat_show_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView7"
        android:text="@string/no_repeat"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#2F4F4F" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="81dp"
        android:text="@string/save_to"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_saveloc_show_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="10dp"
        android:text="@string/server"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#2F4F4F" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="10dp"
        android:text="@string/description_doublepoint"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#2F4F4F" />

</RelativeLayout>