<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_input_password"
        android:layout_marginTop="47dp"
        android:layout_toRightOf="@+id/TextView01" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:text="@string/registrierung"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/register_input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_input_email"
        android:layout_below="@+id/TextView01"
        android:ems="10"
        android:hint="@string/stern_PW"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_input_password_rep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_input_password"
        android:layout_below="@+id/TextView02"
        android:ems="10"
        android:hint="@string/stern_PW"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_app"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/mustermannAweb_de"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_input_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/password_textview"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/text_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_input_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/password_wiederholen_textview"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_input_password_rep"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/registrieren" />

</RelativeLayout>
